--- a/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj.filters
+++ b/src/MagicTrackpad2PtpDevice/MagicTrackpad2PtpDevice.vcxproj.filters
@@ -67,6 +67,9 @@
     <ClInclude Include="Spb.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeviceFamily\SpiTrackpadSeries1.h">
+      <Filter>Device Specific Metadata Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.c">
