--- a/src/AmtPtpDeviceSpiKm/AmtPtpDeviceSpiKm.vcxproj.filters
+++ b/src/AmtPtpDeviceSpiKm/AmtPtpDeviceSpiKm.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Input.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="HID\SpiTrackpadSeries2.h">
+      <Filter>Device Specific Metadata Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Device.c">
