--- a/src/AmtPtpDeviceSpiKm/AmtPtpDeviceSpiKm.vcxproj
+++ b/src/AmtPtpDeviceSpiKm/AmtPtpDeviceSpiKm.vcxproj
@@ -49,6 +49,7 @@
     <ClInclude Include="HidCommon.h" />
     <ClInclude Include="HID\SpiTrackpadSeries1.h" />
     <ClInclude Include="HID\SpiTrackpadSeries2.h" />
+    <ClInclude Include="HID\SpiTrackpadSeries3.h" />
     <ClInclude Include="Input.h" />
     <ClInclude Include="Public.h" />
     <ClInclude Include="Queue.h" />
