Project: lock SDK/DDK to rs4 (17134).
Jesus. Seems I cannot get 16299 and 17763 co-ex on the CI agent.

--- a/src/AmtPtpDeviceUsbUm/MagicTrackpad2PtpDevice.vcxproj
+++ b/src/AmtPtpDeviceUsbUm/MagicTrackpad2PtpDevice.vcxproj
@@ -73,7 +73,7 @@
     <Configuration>Debug</Configuration>
     <Platform Condition="'$(Platform)' == ''">Win32</Platform>
     <RootNamespace>MagicTrackpad2PtpDevice</RootNamespace>
-    <WindowsTargetPlatformVersion>$(LatestTargetPlatformVersion)</WindowsTargetPlatformVersion>
+    <WindowsTargetPlatformVersion>10.0.17134.0</WindowsTargetPlatformVersion>
     <ProjectName>AmtPtpDeviceUsbUm</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
